2011-04-24 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-08
   * display: now return objects after displaying the fitted model.
   * sigma.hat: fix a bug in sigma.hat for mer
   
   
2011-03-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-07
   * AllClass:  add sim.polr class
   * coef: add coef() for sim.polr 
   * sim: add sim() for polr 

2011-03-1 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-06
   * NAMESPACE: export distcrete.histogram

2011-02-23 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-04
   * R/binnedplot: pass addition graphical parameters to the function.

2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-03
   * R/sim: fix a bug in sim.glm() when there is only an intercept 
        as a predictor. (discovered by Barnes Benjamin)


2011-02-14 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-02
   * R/bayesglm: fix some dimension issues when NCOL(x.nobs)==1

2011-02-05 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
   * DESCRIPTION (Version, Date): 1.4-01
   * R/load.first: lib --> lib.loc in packageDescription

2010-11-20 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-08
    * R/simmer: samples directly from the posterior 
        of the fixed and random effects, given sigma and Sigma

2010-10-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-07
    add new methods for sim object, coef, fixef, ranef and sigm.hat

2010-9-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-06
    * R/bayesglm: fix a bug when a model of one predictor with no intercept is fitted
    * man/several: CRAN no longer alows genericFunction docType

2010-6-28 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-05